[package]
name = "rocket-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8" , features = ["json"]}
rusqlite = { version = "0.24.1", features = ["bundled"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"